[TMO-62] 여행로그 response시 국내/해외 분리 로직 추가